<resources>
    <string name="app_name">C323-Assignment-2</string>

    <string name="calculatorText">0</string>  <!-- calculator number text view -->

    <string name="zero">0</string> <!-- numbers -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string> <!-- operators -->
    <string name="negPos">+/-</string>
    <string name="divide">/</string>
    <string name="multiply">X</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="equals">=</string>
    <string name="decimal">.</string>
    <string name="back">⌫</string>
    <string name="lastResult">↺</string>
    <string name="exit">☒</string>
</resources>