<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calculatorText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:text="@string/calculatorText"
        android:textAlignment="textEnd"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/exitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculatorText">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            >

            <Button
                android:id="@+id/clearButton"
                android:text="@string/clear"
                style="@style/CustomButtonStyle"/>

            <Button
                android:id="@+id/backspace"
                android:text="@string/back"
                style="@style/CustomButtonStyle"/>

            <Button
                android:id="@+id/reload"
                android:text="@string/lastResult"
                style="@style/CustomButtonStyle"/>


            <Button
                android:id="@+id/negPosButton"
                android:text="@string/negPos"
                style="@style/CustomButtonStyle"/>

            <Button
                android:id="@+id/divideButton"
                android:text="@string/divide"
                style="@style/CustomButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/sevenButton"
                android:text="@string/seven"
                style="@style/CustomButtonStyle"/>

            <Button
                android:id="@+id/eightButton"
                android:text="@string/eight"
                style="@style/CustomButtonStyle"/>

            <Button
                android:id="@+id/nineButton"
                android:text="@string/nine"
                style="@style/CustomButtonStyle"/>

            <Button
                android:id="@+id/multiplyButton"
                android:text="@string/multiply"
                style="@style/CustomButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/fourButton"
                android:text="@string/four"
                style="@style/CustomButtonStyle"/>

            <Button
                android:id="@+id/fiveButton"
                android:text="@string/five"
                style="@style/CustomButtonStyle"/>

            <Button
                android:id="@+id/sixButton"
                android:text="@string/six"
                style="@style/CustomButtonStyle"/>

            <Button
                android:id="@+id/subtractButton"
                android:text="@string/subtract"
                style="@style/CustomButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/oneButton"
                android:text="@string/one"
                style="@style/CustomButtonStyle"/>

            <Button
                android:id="@+id/twoButton"
                android:text="@string/two"
                style="@style/CustomButtonStyle"/>

            <Button
                android:id="@+id/threeButton"
                android:text="@string/three"
                style="@style/CustomButtonStyle"/>

            <Button
                android:id="@+id/addButton"
                android:text="@string/add"
                style="@style/CustomButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/zeroButton"
                style="@style/CustomButtonStyle"
                android:layout_weight="2"
                android:text="@string/zero" />

            <Button
                android:id="@+id/decimalButton"
                style="@style/CustomButtonStyle"
                android:text="@string/decimal" />

            <Button
                android:id="@+id/equalsButton"
                style="@style/CustomButtonStyle"
                android:text="@string/equals" />

        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        style="@style/CustomButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.95"/>

</androidx.constraintlayout.widget.ConstraintLayout>